# ros2_shelf_shared_autonomy

./: .gitignore  README.md
src/apps/picker/: package.xml  setup.cfg  setup.py
src/apps/picker/launch/: pick.launch.py  pick_and_place.launch.py  sim.launch.py  teleop.launch.py
src/apps/picker/picker/: __init__.py  keyboard_selector.py  keyboard_trigger.py  medicine_detector.py  picker_node.py
src/core/mycobot_description/urdf/mech/: adaptive_gripper.urdf.xacro
src/core/mycobot_description/urdf/sensors/: intel_rgbd_cam_d435.urdf.xacro
src/examples/mycobot_moveit_demos/: CMakeLists.txt  package.xml
src/examples/mycobot_moveit_demos/launch/: gamepad_teleop.launch.py  keyboard_teleop.launch.py
src/examples/mycobot_moveit_demos/src/: gamepad_teleop.cpp  keyboard_teleop.cpp
src/planning/mycobot_moveit_config/: CMakeLists.txt
src/planning/mycobot_moveit_config/config/mycobot_280/: initial_positions.yaml
src/planning/mycobot_moveit_config/rviz/: move_group.rviz
src/simulation/mycobot_gazebo/config/: ros_gz_bridge.yaml
src/simulation/mycobot_gazebo/launch/: mycobot.gazebo.launch.py
src/simulation/mycobot_gazebo/models/medicine_packet_a/: model.config  model.sdf
src/simulation/mycobot_gazebo/models/medicine_packet_b/: model.config  model.sdf
src/simulation/mycobot_gazebo/models/medicine_packet_c/: model.config  model.sdf
src/simulation/mycobot_gazebo/models/medicine_shelf/: model.config  model.sdf
src/simulation/mycobot_gazebo/models/robot_platform/: model.config  model.sdf
src/simulation/mycobot_gazebo/worlds/: medicine_shelf_demo.world
