<?xml version="1.0"?>
<package format="3">
  <name>picker</name>
  <version>0.0.0</version>
  <description>Simple pick-and-place controller driven by gamepad (grasp) + keyboard (select)</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>sensor_msgs_py</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>moveit_py</depend>
  <depend>numpy</depend>
  <depend>scikit-learn</depend>
  <depend>cv_bridge</depend>
  <depend>python3-opencv</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
