[metadata]
name = picker
version = 0.0.0
description = Simple picker package

[options]
packages = find:
install_requires =
    rclpy
    std_msgs
    sensor_msgs
    trajectory_msgs

[options.entry_points]
console_scripts =
    keyboard_selector = picker.keyboard_selector:main
    picker_node = picker.picker_node:main
    medicine_detector = picker.medicine_detector:main

[develop]
script-dir=$base/lib/picker

[install]
install-scripts=$base/lib/picker
